# KRE-1

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-kre-foundation.md  0002-postgresql-pgvector.md
evaluation/golden/: lantern_products.json
src/kre/: __init__.py  api.py  application.py  chunking.py  composition.py  config.py  evaluation.py  ingestion.py  models.py  normalization.py  runtime.py  security.py  telemetry.py
src/kre/connectors/: base.py  github.py  markdown.py
src/kre/embeddings/: __init__.py  base.py  deterministic.py  openai_compatible.py
src/kre/schemas/: __init__.py  search.py
src/kre/search/: __init__.py  api.py  contracts.py  hybrid.py  keyword.py  pgvector.py  retrieval.py  semantic.py
src/kre/storage/: __init__.py  base.py  memory.py  migrations.py  postgres.py  postgres_schema.py
src/kre_1/: __init__.py
tests/: test_composition.py  test_durable_composition.py  test_embeddings.py  test_evaluation.py  test_github_connector.py  test_health.py  test_hybrid_search.py  test_ingestion.py  test_ingestion_orchestration.py  test_keyword_search.py  test_openai_compatible_embeddings.py  test_pgvector_index.py  test_postgres_migrations.py  test_postgres_repository.py  test_postgres_schema.py  test_product_golden_corpus.py  test_runtime_lifespan.py  test_search_api.py  test_search_contracts.py  test_security.py  test_semantic_index.py  test_semantic_retrieval.py  test_startup_cleanup.py  test_storage.py  test_telemetry.py
tests/integration/: test_postgres_migrations.py  test_postgres_pgvector.py
