[project]
name = "kre-1"
version = "0.1.0"
description = "Knowledge Research Engine for the Lantern Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
postgres = [
  "asyncpg>=0.29,<1.0"
]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/kre"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
